...
                                                <fontDescription key="fontDescription" name="AvenirNextCondensed-Bold" family="Avenir Next Condensed" pointSize="30"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dWM-6c-ZAE" userLabel="Resultado">
                                                <rect key="frame" x="36.333333333333343" y="111.66666666666666" width="291.33333333333326" height="32.666666666666657"/>
                                                <accessibility key="accessibilityConfiguration" label="resultadoTextField"/>
                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <fontDescription key="fontDescription" name="KohinoorGujarati-Regular" family="Kohinoor Gujarati" pointSize="16"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pwy-8I-JCh" userLabel="Row3">
                                        <rect key="frame" x="0.0" y="252.33333333333334" width="364" height="324.33333333333326"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="npZ-Jw-mc0" userLabel="piedra">
                                                <rect key="frame" x="36.333333333333329" y="0.0" width="145.66666666666669" height="146"/>
                                                <accessibility key="accessibilityConfiguration" label="botonPiedra"/>
                                                <state key="normal" title="Button" image="piedra"/>
                                                <connections>
                                                    <action selector="botonPiedra:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zsf-0b-bB8"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zPn-TT-Fln" userLabel="tijeras">
                                                <rect key="frame" x="109.33333333333333" y="146" width="145.33333333333337" height="145.66666666666663"/>
                                                <accessibility key="accessibilityConfiguration" label="botonTijeras"/>
                                                <state key="normal" title="Button" image="tijeras"/>
                                                <connections>
                                                    <action selector="botonTijeras:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Smp-jI-pjV"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tsb-kq-MPB" userLabel="papel">
                                                <rect key="frame" x="182" y="0.0" width="145.66666666666663" height="146"/>
                                                <accessibility key="accessibilityConfiguration" label="botonPapel"/>
                                                <state key="normal" title="Button" image="papel"/>
                                                <connections>
                                                    <action selector="botonPapel:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZFB-Nl-ueF"/>
                                                </connections>
                                            </button>
                                        </subviews>
...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kva-Dz-SIo" userLabel="Row4">
                                        <rect key="frame" x="0.0" y="576.66666666666674" width="364" height="72"/>
                                        <subviews>
                                            <button opaque="NO" alpha="0.59999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p4o-M3-iQ7">
                                                <rect key="frame" x="127.33333333333334" y="18" width="109.33333333333334" height="36"/>
                                                <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                <accessibility key="accessibilityConfiguration" label="botonReiniciar"/>
                                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                                                <state key="normal" title="Reiniciar">
                                                    <color key="titleColor" systemColor="labelColor"/>
                                                </state>
                                                <connections>
                                                    <action selector="botonReiniciar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bsu-Ut-Oh3"/>
...
